# RngKitST

./: .gitignore  AGENTS.md  LICENSE.txt  PLAN.md  README.md  main_streamlit.py  pyproject.toml  requirements_streamlit.txt  test_browser_performance.py
.streamlit/: config.toml
modules/bbpy/: ftdi.py
src/rngkit/devices/: __init__.py  bitbabbler.py  pseudo.py  truerng.py
src/rngkit/services/: filenames.py  storage.py  utils.py
tests/: demo_streamlit.py  get_bits.py  randomness_tests.py  test_bitbabbler.py  test_services.py  truerng_read_example.py
tools/installers/: setup_rng_devices_linux_python.sh
