[project]
name = "rngkitpsg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.3.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psutil>=7.0.0",
    "pyserial>=3.5",
    "pyusb>=1.2.1",
    "streamlit>=1.49.1",
    "xlsxwriter>=3.2.5",
]
